fixed fade in animation for mobile, adjust mobile nav spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@ nav {
   transition: 0.5s;
   padding: 10vh 2.5vw;
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   max-width: 260px;
   min-width: 200px;
   max-height: 80vh;
